--- a/include_dir/Cargo.toml
+++ b/include_dir/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 rust-version = "1.56"
 
 [dependencies]
-cap-std = "3.0.0"
+cap-std = { version = "3.0.0", optional = true }
 glob = { version = "0.3", optional = true }
 include_dir_macros = { version = "^0.7.0", path = "../macros" }
 
@@ -21,6 +21,7 @@ tempfile = "3"
 
 [features]
 default = []
+fs = ["cap-std"]
 nightly = ["include_dir_macros/nightly"]
 metadata = ["include_dir_macros/metadata"]
 
